# datadog-python-boto3-layer

./: .gitignore  README.md  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
