[tool.poetry]
name = "datadog-python-boto3-layer-test"
version = "0.1.0"
description = ""
authors = ["Tom Barton <tom.r.barton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.36.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
